Actually fix bug of background color using overflow-auto

--- a/hackernews-app/src/App.css
+++ b/hackernews-app/src/App.css
@@ -1,10 +1,35 @@
+html,
+body,
+#app, #root {
+  margin: 0;
+  height: 100%;
+  /* width: 100%; */
+  margin: 0px;
+  padding: 0px;
+  overflow: auto
+
+  
+}
+
+html {
+  border: 10px solid pink;
+
+}
+
+body {
+  border: 5px solid orange;
+}
+
+
+
 .App {
   text-align: center;
   margin: 0 auto;
   max-width: 1200px;
-  min-height: 100%;
+  /* min-height: 100%; */
   padding:  70px 50px;
   box-sizing: border-box;
+  border: 5px solid red; 
 }
 
 ul {
@@ -54,13 +79,17 @@ li {
 
 .postsContainer {
   text-align: left;
-  line-height: 0.5;
-  height: 100%;
+  border: 4px solid green;
+}
+
+.postsHeight {
+    line-height: 1.5;
 }
 
 .postMetaText {
   color:#808080;
-  font-weight: 525
+  font-weight: 525; 
+  padding-bottom: 15px;
 }
 
 .postLink {
@@ -75,14 +104,14 @@ li {
 }
 
 .dark {
-    background:  #1C2022;
-    height: 100%;
+  background:  #1C2022;
+  min-height: 100%;
 
 } 
 
 .bg-dark {
   background-color:  #1C2022;
-  height: 100%;
+  min-height: 100%;
 } 
 
 .text-dark {
@@ -99,4 +128,8 @@ li {
 
 .active {
   color: #BB2E20;
+}
+
+.textwhite-dark{
+  color: white;
 }
