--- a/hackernews-app/src/index.css
+++ b/hackernews-app/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -6,10 +8,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
-  height: 100%;
   margin: 0px;
   padding: 0px;
   overflow-x: hidden; 
+
   
 }
 
@@ -18,8 +20,9 @@ code {
     monospace;
 }
 
-html, body, #root {
-  height: 100%;
+#root {
+  min-height: 100%;
   width: 100%;
   margin: 0;
+  border: 2px solid blue;
 }
